--- a/src/main/resources/META-INF/config/dev/momo.properties
+++ b/src/main/resources/META-INF/config/dev/momo.properties
@@ -19,6 +19,13 @@ printservlet.interceptorUrl=/momo/print
 # (a user with this role is allowed to do everything)
 role.superAdminRoleName=ROLE_ADMIN
 
+# The name of the SUPERADMIN role
+# (a user with this role is allowed to do everything)
+role.subAdminRoleName=ROLE_SUBADMIN
+
+# The name of the default user role
+role.editorRoleName=ROLE_EDITOR
+
 # The name of the default user role
 role.defaultUserRoleName=ROLE_USER
 
